Fix the overlapping accordion item title with the icon on the right

--- a/src/scss/components/composite/_accordion.scss
+++ b/src/scss/components/composite/_accordion.scss
@@ -25,11 +25,14 @@
     @include modular-typography(1);
 
     > .ood-accordion__button {
+      @include padding(1.5rem 4rem 1.5rem 1.5rem);
+
       @include grid-media-max('sm') {
         font-weight: $su-font-semi-bold;
       }
-      
+
       &::after {
+        right: 1.5rem;
         color: $su-color-black;
       }
     }
